Protección de rutas

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,7 @@
       "@/types/*": ["types/*"],
       "@/services/*": ["services/*"],
       "@/lib/*": ["lib/*"],
+      "@/hooks/*": ["hooks/*"],
     },
 
     /* Bundler mode */
